(Format: Year/Month/Day)
Changes for 0.9.14:
*05/06/18:
  * Fixes #1116965, shadwd windows on restart (Mathias)
    Window.cc
  * little Fix for font effects (Mathias)
    FbTk/ThemeItems.cc
*05/06/15:
  * Enhanced MoveTo, fixes #1074568 (Mathias)
      MoveTo <int|*> <int|*> <Reference Corner>
       - * means "use current value"
       - Reference Corner is one of:
         - UpperLeft, Upper, UpperRight
         - Left, Right
         - LowerLeft, Lower, Right
       examples:
         MoveTo 0 * Left       -> snap to left workspace edge
         MoveTo * 0 Lower      -> snap to lower workspace edge
         MoveTo 0 0 UpperRight -> snap to upper right workspace corner
    FbCommandFactory.cc CurrentWindowCmd.cc/hh
  * Fixes #1198192, vlc to fbgm (Mathias)
    fluxbox-generate_menu.in
  * Fixes #1213003, SendToWorkspace shouldnt follow (Mathias)
      - SendToWorkspace silently changes the workspace of the window
      - TakeToWorkspace takes the window and puts it onto the ws
    FbCommandFactory.cc CurrentWindowCmd.cc/hh
  * Fixes #1216020, *.font.effect wont get cleared if not defined in style (Mathias)
    FbTk/Font.cc
*05/06/09:
  * Reordering of the WorkspaceMenu (Mathias)
    Icon submenu ontop, workspaces below, new|edit|remove on bottom
    WorkspaceMenu.cc
*05/06/07:
  * Fixed justification in WorkspaceNameTool #1213262 (Mathias)
    WorkspaceNameTool.cc
*05/06/03:
  * Massive change of font handling (Mathias)
    - Usage of xft-fonts is prefered, except a font-description starts with '-'
    - Removed "antialias"-option completly, to enable/disable "antialias"
      use either  <fontname>:antialias=<bool> in the style or use
      Xft.antialias: <bool> in your .Xdefaults
    - Added new styleresources: 
        *.font.effect: <halo|shadow>
        *.font.shadow.x : <int>       - shadow x offset
        *.font.shadow.y : <int>       - shadow y offset
        *.font.shadow.color : <color> - color of shadow